# chrome2foam

./: .env.example  .gitignore  LICENSE  README.md  filter.ini.example  pyproject.toml  renovate.json
src/chrome2foam/: __init__.py  cli.py  config.py  database.py  extractor.py  fetcher.py  filter_config.py  models.py
